2011-07-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_setjmp.c: fixed mcs51 stack-auto and xstack implementations
	* src/SDCCopt.c(miscOpt): added my doubts
	* support/regression/tests/bug3379723.c: disabled for hc08 which has no sfr
	* support/regression/tests/setjmp.c: test only on supported targets
	* support/regression/tests/bug3361290.c,
	* support/regression/tests/bug3366711.c,
	* support/regression/tests/bug3379723.c: set native eolstyle property

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/z80/Makefile.in,
	  device/lib/z80/setjmp.s,
	  support/regression/tests/setjmp.c:
	  setjmp() and longjmp() for the Z80.

2011-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/setjmp.h,
	  device/lib/_setjmp.c,
	  support/regression/tests/setjmp.c:
	  Fixed some setjmp() / longjmp() bugs.
	* support/regression/tests/bug3379723.c:
	  Do not compile on host.

2011-07-27 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCopt.c: fixed bug
	  #3378933: Regression test compare_2_n.c fails on sparc machines
	* support/regression/test/compare_2_n.c:
	  reeabled bug #3378933 test case

2011-07-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/bug3379732.c:
	  Bitwise-op cleanup, fixed bug #3379732.

2011-07-26 Borut Razem <borut.razem AT gmail.com>

	* support/regression/test/literalop.c:
	  disabled failing test on i386 and sparc64 NetBSD gcc 4.1
	* support/regression/test/compare_2_n.c:
	  excluded failing test on NetBSD sparc64 and Solaris sparc machines
	  for all targets;
	  see bug #3378933: Regression test compare_2_n.c fails on sparc machines

2011-07-24 Borut Razem <borut.razem AT gmail.com>

	* support/regression/test/bitfields.c:
	  fixed a regtest failure on Solaris i386 host with gcc 4.6
	  by turning off the -O2 optimization
	* support/regression/tests/compare_2_n.c:
	  added test for unsigned long type
