@@ -73,6 +73,7 @@ reg_info *mcs51_regWithIdx (int);
 
 bitVect *mcs51_rUmaskForOp (operand * op);
 bitVect *mcs51_allBitregs (void);
+bitVect *mcs51_allBankregs (void);
 
 extern int mcs51_ptrRegReq;
 extern int mcs51_nRegs;
